# watermark

./: README.md  requirements.txt  setup.cfg  setup.py
data/params/: extracting.yaml
data/params/analysis/: cleaning.yaml  feature_engineering.yaml  preprocessing.yaml
docs/: google_sheets.md
lib/: .env
notebooks/: 00_main.ipynb
src/watermark/: __init__.py
src/watermark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/watermark/interfaces/: config.py  data_interactor.py  model.py  pipeline_step.py  splitter.py  transformer.py
src/watermark/models/: model_example.py
src/watermark/pipelines/: data_cleaning.py  data_extracting.py  data_preprocessing.py  feature_engineering.py  splitting.py
src/watermark/scripts/: watermark_front.py
src/watermark/splitters/: splitter_example.py
src/watermark/transformers/: cleaners.py  feature_engineers.py  preprocessors.py
src/watermark/utils/: helper_functions.py  plot_functions.py  slackbot.py
