[options]
python_requires = < 3.11

install_requires =
    pandas
    numpy
    PyYAML
    scikit-learn
    matplotlib
    python-dotenv
    yapf
    seaborn
    ipywidgets
    psycopg2-binary
    sqlalchemy
    googleAPI
    openpyxl
    unidecode
    jellyfish
    autopep8
    
include_package_data = True
packages = find_namespace:
package_dir == 
    = src

[options.packages.find]
where = src


